--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -26,13 +26,31 @@
         android:hint="@string/search"
         android:id="@+id/search_cocktail"
         android:padding="5sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_cocktail"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="20sp"
         android:id="@+id/btn_search_by_name"
-        android:text="@string/btn_search_name" />
+        android:text="@string/btn_search_name"
+        android:background="@color/colorAccent"
+        android:layout_marginStart="15sp"
+        />
+
+    <Button
+        android:id="@+id/btn_search_by_category"
+        android:layout_width="146dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_cocktail"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="132dp"
+        android:layout_marginLeft="35sp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@id/btn_search_by_name"
+        android:background="@color/colorPrimaryLight"
+        android:text="@string/btn_search_ingredient" />
 
 </RelativeLayout>
