--- a/app/src/main/res/layout/activity_cocktails_list_view.xml
+++ b/app/src/main/res/layout/activity_cocktails_list_view.xml
@@ -16,5 +16,11 @@
         android:textColor="@color/colorPrimaryLight"
         android:layout_centerHorizontal="true"
         />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryLight"
+        android:layout_below="@id/search_results"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
