--- a/app/src/main/res/layout/activity_cocktails_list_view.xml
+++ b/app/src/main/res/layout/activity_cocktails_list_view.xml
@@ -10,16 +10,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="15sp"
         android:text="Search: "
         android:id="@+id/search_results"
         android:textColor="@color/colorPrimaryLight"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15sp"
         />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_results"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:id="@+id/cocktail_list"
+        />
 
 </RelativeLayout>
