--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,7 +13,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/hompg"
+        app:srcCompat="@drawable/welc"
         tools:layout_editor_absoluteX="0dp" />
 
     <EditText
@@ -25,7 +25,7 @@
         android:background="@color/colorTextIcons"
         android:hint="@string/search"
         android:id="@+id/search_cocktail"
-        android:padding="5sp"
+        android:padding="8sp"
         android:layout_marginLeft="10sp"
         android:layout_marginRight="10sp"
         />
